--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Jennifer.</h1>
-									<h4>Welcome and so nice to meet you!<br /> Take a peek around, check things out and make yourself at home.</h4>
+									<p>Welcome and so nice to meet you!<br /> Take a peek around, check things out and make yourself at home.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
