added project pictures

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 								<div class="intro joined">
 									<h2 class="major">Skills</h2>
 									<ul>
-											<li>Ruby Ruby on Rails</li>
+											<li>Ruby, Ruby on Rails</li>
 											<li>HTML, CSS, Javascript</li>
-											<li>Etiam vel felis viverra.</li>
+											<li>Git, Github, OOP, Vue.js</li>
 									</ul>
 								</div>
 								<div class="inner">
@@ -72,9 +72,9 @@
 							<section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major">Interests</h2>
-									<p>When not coding, I am an avid traveler always adding new places to 
-									my bucket list. Lover of all things cats. Cat cuddles, cat purrs, cat nuzzles. I'll take it all. Oh, and caffeine. You'll often find me smelling a fresh dirty
-								chai in the back of Starbucks trying not too look too into it. </p>
+									<p>When not coding, I am an avid traveler always adding new places to my bucket list. Lover of all things cats. Cat cuddles, cat purrs, cat nuzzles. I'll take it all. 
+
+									I also enjoy board games, matcha lattes, and ALL THE MOVIES.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
@@ -87,20 +87,25 @@
 									<h2 class="major">Projects</h2>
 									<p>Check out my most up to date projects here. Always in progress. </p>
 								</div>
+
 								<div class="gallery">
-									<div class="group span-3">
+									<!-- <div class="group span-3">
 										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-									</div>
-									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
-									<div class="group span-4-5">
-										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
+									</div> -->
+
+									<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-2-5" data-position="top"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
+
+									<!-- <div class="group span-4-5">
+										<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-3" data-position="top"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
+										<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-1-5" data-position="center"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
 										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-									</div>
-									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+									</div> -->
+									<a href="images/game_play.png" class="image filtered span-2-5" data-position="right"><img src="images/game_play.png" alt="" /></a>
+
+									<a href="images/game_over.png" class="image filtered span-2-5" data-position="right"><img src="images/game_over.png" alt="" /></a>
 								</div>
 							</section>
 
@@ -108,8 +113,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p>Always interested in new opportunities. Feel free to reach out. Let's
-										see what we can make together! </p>
+									<p>Always interested in new opportunities. Feel free to reach out. Let's see what we can make together! </p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
