--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
 
 									<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-2-5" data-position="top"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
 
-									<div class="group span-4-5">
-										<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-3" data-position="top"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
-										<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-1-5" data-position="center"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
-										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-									</div>
+									<!-- <div class="group span-4-5"> -->
+										<!-- <a href="images/Word_Drop_Start_Screen.png" class="image filtered span-3" data-position="top"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a> -->
+										<!-- <a href="images/Word_Drop_Start_Screen.png" class="image filtered span-1-5" data-position="center"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a> -->
+										<!-- <a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a> -->
+									<!-- </div> -->
 									<a href="images/game_play.png" class="image filtered span-2-5" data-position="right"><img src="images/game_play.png" alt="" /></a>
 
 									<a href="images/game_over.png" class="image filtered span-2-5" data-position="right"><img src="images/game_over.png" alt="" /></a>
