--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 								</div>
 
 								<div class="gallery">
-									<div class="group span-3">
+									<!-- <div class="group span-3">
 										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-									</div>
-
+									</div> -->
+									<div>
 									<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-2-5" data-position="top"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
 
 									<!-- <div class="group span-4-5"> -->
@@ -106,6 +106,7 @@
 									<a href="images/game_play.png" class="image filtered span-2-5" data-position="right"><img src="images/game_play.png" alt="" /></a>
 
 									<a href="images/game_over.png" class="image filtered span-2-5" data-position="right"><img src="images/game_over.png" alt="" /></a>
+									</div>	
 								</div>
 							</section>
 
