--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/pic01.jpg" alt="" />
+									<img src="images/jennifer_2.jpg" alt="" />
 								</div>
 							</section>
 
@@ -89,13 +89,14 @@
 								</div>
 
 								<div class="gallery">
-									<!-- <div class="group span-3">
-										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+									<!-- <div class="group span-4"> -->
+										<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-2-5" data-position="top"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
+										<a href="images/game_play.png" class="image filtered span-2-5" data-position="right"><img src="images/game_play.png" alt="" /></a>
+										<a href="images/game_over.png" class="image filtered span-2-5" data-position="right"><img src="images/game_over.png" alt="" /></a>
+										<!-- <a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-									</div> -->
-									<div>
-									<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-2-5" data-position="top"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
+										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a> -->
+									<!-- </div> -->
 
 									<!-- <div class="group span-4-5"> -->
 										<!-- <a href="images/Word_Drop_Start_Screen.png" class="image filtered span-3" data-position="top"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a> -->
@@ -103,21 +104,31 @@
 										<!-- <a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a> -->
 									<!-- </div> -->
-									<a href="images/game_play.png" class="image filtered span-2-5" data-position="right"><img src="images/game_play.png" alt="" /></a>
-
-									<a href="images/game_over.png" class="image filtered span-2-5" data-position="right"><img src="images/game_over.png" alt="" /></a>
-									</div>	
+									
 								</div>
 							</section>
+
+							<section class="panel spotlight medium right" id="first">
+								<div class="content span-7">
+									<h2 class="major">Bootcamp</h2>
+									<p>Learning to code at <strong>Actualize Coding Bootcamp</strong> has propelled me to beyond what I thought was even possible. It’s given me a mindset to see solving problems in a completely new way, whether it’s breaking it down into small pieces, or rebuilding something from scratch to get a deeper understanding. I no longer look at software as a tool I simply interact with, but as a living breathing entity made of intricacies and nuances I can tinker with, manipulate or create from the ground up.</p>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/class.jpg" alt="" />
+								</div>
+							</section>
+
 
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
 									<p>Always interested in new opportunities. Feel free to reach out. Let's see what we can make together! </p>
+									<p>jenniferlynnhatton@gmail.com</p>
+									
 								</div>
 								<div class="inner columns divided">
-									<div class="span-3-25">
+									<!-- <div class="span-3-25">
 										<form method="post" action="#">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -135,7 +146,7 @@
 												<li><input type="submit" value="Send Message" class="button special" /></li>
 											</ul>
 										</form>
-									</div>
+									</div> -->
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
 											<li class="icon fa-github"><a href="https://github.com/mynameisjenn">@mynameisjenn</a></li>
