--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/Jennifer_2.jpg" alt="" />
+									<img src="images/jennifer_hatton.jpg" alt="" />
 								</div>
 							</section>
 
@@ -121,32 +121,13 @@
 
 						<!-- Panel -->
 							<section class="panel color4-alt">
-								<div class="intro color4">
+								<div class="intro color2">
 									<h2 class="major">Contact</h2>
 									<p>Always interested in new opportunities. Feel free to reach out. Let's see what we can make together! </p>
 									<p>jenniferlynnhatton@gmail.com</p>
 									
 								</div>
 								<div class="inner columns divided">
-									<!-- <div class="span-3-25">
-										<form method="post" action="#">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="email" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="4"></textarea>
-											</div>
-											<ul class="actions">
-												<li><input type="submit" value="Send Message" class="button special" /></li>
-											</ul>
-										</form>
-									</div> -->
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
 											<li class="icon fa-github"><a href="https://github.com/mynameisjenn">@mynameisjenn</a></li>
@@ -424,6 +405,26 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre> -->
 									</div>
 								</div>
 							</section> -->
+
+							<!-- <div class="span-3-25">
+										<form method="post" action="#">
+											<div class="field half">
+												<label for="name">Name</label>
+												<input type="text" name="name" id="name" />
+											</div>
+											<div class="field half">
+												<label for="email">Email</label>
+												<input type="email" name="email" id="email" />
+											</div>
+											<div class="field">
+												<label for="message">Message</label>
+												<textarea name="message" id="message" rows="4"></textarea>
+											</div>
+											<ul class="actions">
+												<li><input type="submit" value="Send Message" class="button special" /></li>
+											</ul>
+										</form>
+									</div> -->
 
 						<!-- Copyright -->
 							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
