--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Bio</h2>
-									<p>In my previous life I did many things - taught for a year in Chicago Public Schools, taught ESL in South Korea. And most recently, I worked as both a Licensed Hearing Instrument Dispenser and Certified Optician for Costco Wholesale. Although I loved working in the service industry, it was time for a new challenge. As a recent grad from <strong>Actualize Coding Bootcamp</strong>,I learned more than I ever thought I could in 12 weeks. Can't wait to continue the journey. </p>
+									<p>In my previous life, I’ve been an English Teacher, a Photo Technician, a Hearing Instrument Specialist and currently work as a Licensed Optician. About a year ago, I started to seek new  challenges and began to learn code on my own - only to realize I needed community and passionate instructors. So I took the plunge and became a student at Actualize Coding Bootcamp. 
+
+									As a developer, I hope to meld my personal values to seek and reach new possibilities with a deep desire to develop technology that adds value, fun, meaning and purpose to our small world. Whether it’s building online tutorials for tips on money saving, educational platforms for students K - 12, or games that help improve memory - if it enhances human quality of life, I’m in. Let’s explore the possibilities and build something - together.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
@@ -124,7 +126,7 @@
 								<div class="intro color2">
 									<h2 class="major">Contact</h2>
 									<p>Always interested in new opportunities. Feel free to reach out. Let's see what we can make together! </p>
-									<p>jenniferlynnhatton@gmail.com</p>
+									<p>email: jenniferlynnhatton@gmail.com</p>
 									
 								</div>
 								<div class="inner columns divided">
