--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Bio</h2>
-									<p>In my previous life, I’ve been an English Teacher, a Photo Technician, a Hearing Instrument Specialist and currently work as a Licensed Optician. About a year ago, I started to seek new  challenges and began to learn code on my own - only to realize I needed community and passionate instructors. So I took the plunge and became a student at Actualize Coding Bootcamp. 
+									<p>In my previous life, I’ve been an English Teacher, a Photo Technician, a Hearing Instrument Specialist and currently work as a Licensed Optician. About a year ago, I started to seek new  challenges and began to learn code on my own - only to realize I needed community and passionate instructors. So I took the plunge and became a student at Actualize Coding Bootcamp.</p> 
 
-									As a developer, I hope to meld my personal values to seek and reach new possibilities with a deep desire to develop technology that adds value, fun, meaning and purpose to our small world. Whether it’s building online tutorials for tips on money saving, educational platforms for students K - 12, or games that help improve memory - if it enhances human quality of life, I’m in. Let’s explore the possibilities and build something - together.</p>
+									<p>As a developer, I hope to meld my personal values to seek and reach new possibilities with a deep desire to develop technology that adds value, fun, meaning and purpose to our world. Whether it’s building online tutorials for tips on money saving, educational platforms for students K - 12, or games that help improve memory - if it enhances human quality of life, I’m in. Let’s explore the possibilities and build something - together.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
