moved bootcamp image, changed title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ethereal by HTML5 UP</title>
+		<title>Jennifer Hatton</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,6 +48,7 @@
 								</div>
 							</section>
 
+
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
@@ -83,6 +84,18 @@
 								</div>
 							</section>
 
+
+							<section class="panel spotlight medium left" id="first">
+								<div class="content span-7">
+									<h2 class="major">Bootcamp</h2>
+									<p>Learning to code at <strong>Actualize Coding Bootcamp</strong> has propelled me to beyond what I thought was even possible. It’s given me a mindset to see solving problems in a completely new way, whether it’s breaking it down into small pieces, or rebuilding something from scratch to get a deeper understanding. I no longer look at software as a tool I simply interact with, but as a living breathing entity made of intricacies and nuances I can tinker with, manipulate or create from the ground up.</p>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/class.jpg" alt="" />
+								</div>
+							</section>
+
+
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
@@ -110,7 +123,7 @@
 								</div>
 							</section>
 
-							<section class="panel spotlight medium right" id="first">
+							<!--  --><!-- <section class="panel spotlight medium left" id="first">
 								<div class="content span-7">
 									<h2 class="major">Bootcamp</h2>
 									<p>Learning to code at <strong>Actualize Coding Bootcamp</strong> has propelled me to beyond what I thought was even possible. It’s given me a mindset to see solving problems in a completely new way, whether it’s breaking it down into small pieces, or rebuilding something from scratch to get a deeper understanding. I no longer look at software as a tool I simply interact with, but as a living breathing entity made of intricacies and nuances I can tinker with, manipulate or create from the ground up.</p>
@@ -120,7 +133,7 @@
 								</div>
 							</section>
 
-
+ -->
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color2">
@@ -429,7 +442,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre> -->
 									</div> -->
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<div class="copyright">&copy; Jennifer Hatton 2018. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 					</div>
 
