updated bio, added capstone panels

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Bio</h2>
-									<p>In my previous life, I’ve been an English Teacher, a Photo Technician, a Hearing Instrument Specialist and currently work as a Licensed Optician. About a year ago, I started to seek new  challenges and began to learn code on my own - only to realize I needed community and passionate instructors. So I took the plunge and became a student at Actualize Coding Bootcamp.</p> 
+									<p>In my previous life, I’ve been an English Teacher, a Photo Technician, a Hearing Instrument Specialist and a Licensed Optician. You could say, it took me awhile to find my niche.</p> 
 
-									<p>As a developer, I hope to meld my personal values to seek and reach new possibilities with a deep desire to develop technology that adds value, fun, meaning and purpose to our world. Whether it’s building online tutorials for tips on money saving, educational platforms for students K - 12, or games that help improve memory - if it enhances human quality of life, I’m in. Let’s explore the possibilities and build something - together.</p>
+									<p>Only recently did I realize that the only way I'd ever truly be satisfied in life was if I was challenged by the work I do everyday. Luckily, it only took a few months before I made one of the best decisions I've made in a long time and became a student at Actualize Coding Bootcamp. Since then, I've pushed myself harder, stretched beyond what I thought I was capable of and still continue to want more.</p> 
+
+									<p>As a developer, I am hungry to learn, to grow, and continue to strive to deepen my understanding of each programming language I encounter. What I love about coding is that it's ever changing, it's never boring, and there's always a new way to solve probem. Not to mention, it's an industry where I will never stop learning. How exciting! So here I am - fresh and eager to tackle my first job. Who's with me?! </p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
@@ -55,7 +57,7 @@
 									<h2 class="major">Skills</h2>
 									<ul>
 											<li>Ruby, Ruby on Rails</li>
-											<li>HTML, CSS, Javascript</li>
+											<li>HTML, CSS, Javascript, Bootstrap</li>
 											<li>Git, Github, OOP, Vue.js</li>
 									</ul>
 								</div>
@@ -99,18 +101,20 @@
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Projects</h2>
-									<p>Check out my most up to date projects here. Always in progress. </p>
+									<h2 class="major">Capstone</h2>
+									<p>The primary piece of my capstone is a game called Word Drop. It’s written completely in Ruby with a gem called Gosu. The game is also connected to a Rails Application called Grammar Slayer. It includes a leaderboard to store high scores and a database that serves as a word bank. Future plans include re-writing the game in Javascript so users can play in the browser. </p>
+
+									<p>Demonstration video coming soon!</p>
 								</div>
 
 								<div class="gallery">
-									<!-- <div class="group span-4"> -->
-										<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-2-5" data-position="top"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
-										<a href="images/game_play.png" class="image filtered span-2-5" data-position="right"><img src="images/game_play.png" alt="" /></a>
-										<a href="images/game_over.png" class="image filtered span-2-5" data-position="right"><img src="images/game_over.png" alt="" /></a>
-										<!-- <a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a> -->
+										<a href="images/Word_Drop_Start_Screen.png" class="image filtered span-2-5" data-position="center"><img src="images/Word_Drop_Start_Screen.png" alt="" /></a>
+										<a href="images/game_play.png" class="image filtered span-2-5" data-position="center"><img src="images/game_play.png" alt="" /></a>
+										<a href="images/game_over.png" class="image filtered span-2-5" data-position="center"><img src="images/game_over.png" alt="" /></a>
+
+										<a href="images/Grammar_slayer.png" class="image filtered span-3" data-position="center"><img src="images/Grammar_slayer.png" alt="" /></a>
+										<a href="images/join.png" class="image filtered span-3" data-position="center"><img src="images/join.png" alt="" /></a>
+										<a href="images/leaderboard.png" class="image filtered span-5" data-position="left"><img src="images/leaderboard.png" alt="" /></a>
 									<!-- </div> -->
 
 									<!-- <div class="group span-4-5"> -->
