--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Bio</h2>
-									<p>In my previous life, I’ve been an English Teacher, a Photo Technician, a Hearing Instrument Specialist and a Licensed Optician. You could say, it took me awhile to find my niche.</p> 
+									<p>In my previous life, I’ve been an English Teacher, a Photo Tech, a Hearing Instrument Specialist and a Licensed Optician. You could say, it took me awhile to find my niche. Luckily, it only took a few months before I made one of the best decisions I've made in a long time and became a student at Actualize Coding Bootcamp. Since then, I've pushed myself harder, stretched beyond what I thought I was capable of and still continue to want more.</p> 
 
-									<p>Only recently did I realize that the only way I'd ever truly be satisfied in life was if I was challenged by the work I do everyday. Luckily, it only took a few months before I made one of the best decisions I've made in a long time and became a student at Actualize Coding Bootcamp. Since then, I've pushed myself harder, stretched beyond what I thought I was capable of and still continue to want more.</p> 
-
-									<p>As a developer, I am hungry to learn, to grow, and continue to strive to deepen my understanding of each programming language I encounter. What I love about coding is that it's ever changing, it's never boring, and there's always a new way to solve probem. Not to mention, it's an industry where I will never stop learning. How exciting! So here I am - fresh and eager to tackle my first job. Who's with me?! </p>
+									<p>As a developer, I am hungry to learn, to grow, and to deepen my understanding of each programming language I encounter. What I love about coding is that it's ever changing, it's never boring, and there's always a new way to a solve probem. Not to mention, it's an industry where I will never stop learning. How exciting! So here I am - fresh and eager to tackle my first job. Who's with me?! </p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
@@ -77,13 +75,13 @@
 							<section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major">Interests</h2>
-									<p>When not coding, I am an avid traveler always adding new places to my bucket list. Lover of all things cats. Cat cuddles, cat purrs, cat nuzzles. I'll take it all. 
-
-									I also enjoy board games, matcha lattes, and ALL THE MOVIES.</p>
+									<p>When not coding, I am an avid traveler always adding new places to my bucket list. Lover of all things cats. Cat cuddles, cat purrs, cat nuzzles. I'll take it all. I also enjoy board games, matcha lattes, and ALL THE MOVIES.</p>
 								</div>
+
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
 								</div>
+
 							</section>
 
 
@@ -112,9 +110,9 @@
 										<a href="images/game_play.png" class="image filtered span-2-5" data-position="center"><img src="images/game_play.png" alt="" /></a>
 										<a href="images/game_over.png" class="image filtered span-2-5" data-position="center"><img src="images/game_over.png" alt="" /></a>
 
-										<a href="images/Grammar_slayer.png" class="image filtered span-3" data-position="center"><img src="images/Grammar_slayer.png" alt="" /></a>
-										<a href="images/join.png" class="image filtered span-3" data-position="center"><img src="images/join.png" alt="" /></a>
-										<a href="images/leaderboard.png" class="image filtered span-5" data-position="left"><img src="images/leaderboard.png" alt="" /></a>
+										<a href="images/Grammar_Slayer.png" class="image filtered span-3" data-position="center"><img src="images/Grammar_Slayer.png" alt="" /></a>
+										<a href="images/Join.png" class="image filtered span-3" data-position="center"><img src="images/Join.png" alt="" /></a>
+										<a href="images/Leaderboard.png" class="image filtered span-5" data-position="left"><img src="images/Leaderboard.png" alt="" /></a>
 									<!-- </div> -->
 
 									<!-- <div class="group span-4-5"> -->
@@ -127,17 +125,6 @@
 								</div>
 							</section>
 
-							<!--  --><!-- <section class="panel spotlight medium left" id="first">
-								<div class="content span-7">
-									<h2 class="major">Bootcamp</h2>
-									<p>Learning to code at <strong>Actualize Coding Bootcamp</strong> has propelled me to beyond what I thought was even possible. It’s given me a mindset to see solving problems in a completely new way, whether it’s breaking it down into small pieces, or rebuilding something from scratch to get a deeper understanding. I no longer look at software as a tool I simply interact with, but as a living breathing entity made of intricacies and nuances I can tinker with, manipulate or create from the ground up.</p>
-								</div>
-								<div class="image filtered tinted" data-position="top left">
-									<img src="images/class.jpg" alt="" />
-								</div>
-							</section>
-
- -->
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color2">
