--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Bio</h2>
-									<p>In my previous life, I’ve been an English Teacher, a Photo Tech, a Hearing Instrument Specialist and a Licensed Optician. You could say, it took me awhile to find my niche. Luckily, it only took a few months before I made one of the best decisions I've made in a long time and became a student at Actualize Coding Bootcamp. Since then, I've pushed myself harder, stretched beyond what I thought I was capable of and still continue to want more.</p> 
+									<p>In my previous life, I’ve been an English Teacher, a Photo Tech, a Hearing Instrument Specialist and a Licensed Optician. You could say, it took me awhile to find my niche. Luckily, it only took a few months before I made one of the best decisions I've made in a long time and became a student at <strong>Actualize Coding Bootcamp</strong>. Since then, I've pushed myself harder, stretched beyond what I thought I was capable of and still continue to want and crave more.</p> 
 
-									<p>As a developer, I am hungry to learn, to grow, and to deepen my understanding of each programming language I encounter. What I love about coding is that it's ever changing, it's never boring, and there's always a new way to a solve probem. Not to mention, it's an industry where I will never stop learning. How exciting! So here I am - fresh and eager to tackle my first job. Who's with me?! </p>
+									<p>As a developer, I am hungry to learn, to grow, and to deepen my understanding of each programming language I encounter. What I love about coding is that it's ever-changing, never boring, and there's always a new way to a solve probem. Not to mention, it's an industry where I will never stop learning. How exciting! So here I am - fresh and eager to tackle my first job. Ready to seek and find ALL THE SOLUTIONS, who's with me?! </p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
